fix: pagination jump icon

--- a/packages/drip-table/src/components/pagination/index.module.less
+++ b/packages/drip-table/src/components/pagination/index.module.less
@@ -161,6 +161,14 @@
 
 .@{prefixCls}-jump-next .@{prefixCls}-item-container .@{prefixCls}-item-link-icon,
 .@{prefixCls}-jump-prev .@{prefixCls}-item-container .@{prefixCls}-item-link-icon {
+  display: inline-block;
+  font-style: normal;
+  line-height: 0;
+  text-align: center;
+  text-transform: none;
+  vertical-align: -.125em;
+  text-rendering: optimizelegibility;
+  -webkit-font-smoothing: antialiased;
   color: #1890ff;
   font-size: 12px;
   letter-spacing: -1px;
